--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Gumball Machine</title>
+    <title>Gumball Machine Version 2</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1 align="center">Welcome to the Gumball Machine</h1>
+    <h1 align="center">Welcome to the Gumball Machine Node JS Version 2</h1>
     <form name="Gumball" method="post" action="/GumballPost">
     
     <p>
@@ -21,7 +21,7 @@
     </textArea>
     <input type="hidden" name="id" value=<%=data.id%> />
     <input type="hidden" name="modelNumber" value=<%=data.modelNumber%> />
-     <input type="hidden" name="serialNumber" value=<%=data.serialNumber%> />
+    <input type="hidden" name="serialNumber" value=<%=data.serialNumber%> />
     <input type="hidden" name="state" value="<%=data.state%>" />
     <input type="hidden" name="count" value=<%=data.countGumballs%> />
     
